# grippy-code-review

./: .gitignore  .grippyignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEBT.md  README.md  SECURITY.md  pyproject.toml  server.json  smithery.yaml  zensical.toml
.github/: CODEOWNERS  pull_request_template.md  quality-gate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: _build-reusable.yml  codeql.yml  docs.yml  grippy-review.yml  pre-commit.yml  release.yml  scorecard.yml  tests.yml
benchmarks/: __init__.py  __main__.py  cli.py  results.py
benchmarks/fixtures/: graph_ground_truth.json
benchmarks/graph/: ground_truth.py  runner.py
benchmarks/martian/: README.md  __init__.py  config.py  extract.py  fetch_diffs.py  judge.py  pyproject.toml  report.py  run_grippy.py  run_indexed.py
benchmarks/martian/golden_comments/: SOURCE.md  sentry.json
benchmarks/martian/prompts/: CHECKSUMS.md  CHECKSUMS.sha256  extract.txt  extract_system.txt  judge.txt
benchmarks/search/: adapter.py  metrics.py  runner.py
docs/: index.md
docs/explanation/: architecture.md  knowledge-graph.md  security-model.md
docs/getting-started/: quickstart.md
docs/how-to/: configuration.md  contributing.md  review-modes.md  self-hosted-llm-guide.md  suppression.md
docs/internals/audit/: EXECUTIVE-VERDICT.md  FINAL-RETROSPECTIVE.md  FRESHNESS.md  METHODOLOGY.md  PHASE-1-RETROSPECTIVE.md  REMAINING-FIXES.md  SCORECARD-TEMPLATE.md  SUPERSET-TEMPLATE.md  SUPERSET.md  index.md  registry.yaml
docs/internals/audit/CHECKLISTS/: data-model.md  infrastructure.md  llm-agent.md  llm-facing-tool.md  review-pipeline.md  security-rule.md
docs/internals/audit/agent/: SCORECARD.md
docs/internals/audit/cli/: SCORECARD.md
docs/internals/audit/codebase/: SCORECARD.md
docs/internals/audit/embedder/: SCORECARD.md
docs/internals/audit/github-review/: SCORECARD.md
docs/internals/audit/graph-context/: SCORECARD.md
docs/internals/audit/graph-store/: SCORECARD.md
docs/internals/audit/graph-types/: SCORECARD.md
docs/internals/audit/ignore/: SCORECARD.md
docs/internals/audit/imports/: SCORECARD.md
docs/internals/audit/local-diff/: SCORECARD.md
docs/internals/audit/mcp-config/: SCORECARD.md
docs/internals/audit/mcp-response/: SCORECARD.md
docs/internals/audit/mcp-server/: SCORECARD.md
docs/internals/audit/pilot/: FRICTION-LOG.md  PHASE-1-RETRO.md  PHASE-2-ADJUDICATION.md
docs/internals/audit/prompts/: SCORECARD.md
docs/internals/audit/review/: SCORECARD.md
docs/internals/audit/rule-ci-risk/: SCORECARD.md
docs/internals/audit/rule-creds/: SCORECARD.md
docs/internals/audit/rule-crypto/: SCORECARD.md
docs/internals/audit/rule-deser/: SCORECARD.md
docs/internals/audit/rule-engine/: SCORECARD.md
docs/internals/audit/rule-enrichment/: SCORECARD.md
docs/internals/audit/rule-llm-sinks/: SCORECARD.md
docs/internals/audit/rule-sinks/: SCORECARD.md
docs/internals/audit/rule-sql/: SCORECARD.md
docs/internals/audit/rule-traversal/: SCORECARD.md
docs/internals/audit/rule-workflows/: SCORECARD.md
docs/reference/: changelog.md  scoring-rubric.md
examples/github-actions/: grippy-review.yml  grippy-security.yml
examples/sample-output/: audit-diff.json  scan-diff.json
scripts/: capture_agno_golden.py  check_test_parity.py
src/grippy/: __init__.py  __main__.py  agent.py  agno_adapter.py  codebase.py  github_review.py  graph.py  graph_context.py  graph_store.py  graph_types.py  ignore.py  imports.py  injection_patterns.py  input_fence.py  local_diff.py  mcp_config.py  mcp_response.py  mcp_server.py  output_policy.py  ports.py  retry.py  review.py  schema.py
src/grippy/prompts_data/: confidence-filter.md  output-schema.md  scoring-rubric.md  sdk-easter-egg.md  system-core.md
src/grippy/rules/: base.py  ci_script_risk.py  config.py  dangerous_sinks.py  engine.py  enrichment.py  hardcoded_credentials.py  insecure_deserialization.py  llm_output_sinks.py  path_traversal.py  registry.py  sql_injection.py  weak_crypto.py
tests/: conftest.py  e2e_fixtures.py  test_bench_martian_config.py  test_bench_martian_contracts.py  test_bench_martian_extract.py  test_bench_martian_fetch.py  test_bench_martian_judge.py  test_bench_martian_report.py  test_bench_martian_run.py  test_benchmarks_graph.py  test_benchmarks_results.py  test_benchmarks_search.py  test_e2e_adversarial_inputs.py  test_e2e_edge_diffs.py  test_e2e_llm_characterization.py  test_e2e_llm_contract.py  test_e2e_llm_smoke.py  test_e2e_mcp_stdio.py  test_e2e_property.py  test_e2e_rule_integration.py  test_grippy_agent.py  test_grippy_agent_evolution.py  test_grippy_agno_adapter.py  test_grippy_cli_mcp.py  test_grippy_codebase.py  test_grippy_embedder.py  test_grippy_github_review.py  test_grippy_graph.py  test_grippy_graph_context.py  test_grippy_graph_integration.py  test_grippy_graph_store.py  test_grippy_graph_types.py  test_grippy_ignore.py  test_grippy_imports.py  test_grippy_injection_patterns.py  test_grippy_input_fence.py  test_grippy_local_diff.py  test_grippy_mcp_config.py  test_grippy_mcp_response.py  test_grippy_mcp_server.py  (+21 more)
tests/fixtures/agno_golden_messages/: cli.txt  cli_local.txt  github_app.txt  github_app_local.txt  governance_check.txt  governance_check_local.txt  metadata.txt  pr_review.txt  pr_review_local.txt  security_audit.txt  security_audit_local.txt  surprise_audit.txt  surprise_audit_local.txt
(+11 files in other folders)
