[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grippy"]

[tool.hatch.build.targets.wheel.force-include]
"src/grippy/prompts_data" = "grippy/prompts_data"

[project]
name = "grippy-code-review"
version = "0.2.0"
description = "AI code review agent with personality — built on Agno"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Nelson Spencer" }
]

dependencies = [
    "agno[openai]>=1.1.0",
    "pydantic>=2.0.0",
    "PyGithub>=2.1.0",
    "requests>=2.28.0",
    "sqlalchemy>=2.0.0",
    "navi-sanitize>=0.1.0",
    "nh3>=0.2.0",
]

[project.optional-dependencies]
persistence = [
    "lancedb>=0.20.0",
]
benchmarks = [
    "coir-eval>=0.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.9.0",
    "mypy>=1.8.0",
    "lancedb>=0.20.0",
    "types-requests>=2.32.4.20260107",
    "pre-commit>=4.0.0",
    "bandit>=1.9.0",
    "pip-audit>=2.7.0",
    "hypothesis>=6.0.0",
    "defusedxml>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "RUF", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.bandit]
targets = ["src/grippy"]
exclude_dirs = ["tests"]
skips = [
    "B101",  # assert used — fine in production code for invariants
    "B404",  # import subprocess — needed for git/gh CLI calls
    "B603",  # subprocess without shell=True — this is the SECURE pattern
    "B607",  # partial executable path — git/gh are standard CLI tools
]
