[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grippy"]

[tool.hatch.build.targets.wheel.force-include]
"src/grippy/prompts_data" = "grippy/prompts_data"

[project]
name = "grippy-mcp"
version = "0.2.0"
description = "AI code review agent with personality — security-focused MCP server and CI action, built on Agno"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Nelson Spencer" }
]
keywords = [
    "mcp",
    "code-review",
    "security",
    "ai",
    "llm",
    "github-actions",
    "static-analysis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
    "Typing :: Typed",
]

dependencies = [
    "agno[openai]>=1.1.0",
    "pydantic>=2.0.0",
    "PyGithub>=2.1.0",
    "requests>=2.28.0",
    "sqlalchemy>=2.0.0",  # required by agno's sqlite session storage
    "navi-sanitize>=0.1.0",
    "nh3>=0.2.0",
    "mcp>=1.0.0",
    "lancedb>=0.20.0",
]

[project.optional-dependencies]
anthropic = ["agno[anthropic]>=1.1.0"]
google = ["agno[google]>=1.1.0"]
groq = ["agno[groq]>=1.1.0"]
mistral = ["agno[mistral]>=1.1.0"]
benchmarks = [
    "coir-eval>=0.1.0",
]

[project.scripts]
grippy = "grippy.__main__:main"
grippy-mcp = "grippy.__main__:main"

[project.urls]
Homepage = "https://github.com/Project-Navi/grippy-code-review"
Repository = "https://github.com/Project-Navi/grippy-code-review"
Issues = "https://github.com/Project-Navi/grippy-code-review/issues"
Documentation = "https://github.com/Project-Navi/grippy-code-review/wiki"
Changelog = "https://github.com/Project-Navi/grippy-code-review/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.9.0",
    "mypy>=1.8.0",
    "types-requests>=2.32.4.20260107",
    "pre-commit>=4.0.0",
    "bandit>=1.9.0",
    "pip-audit>=2.7.0",
    "hypothesis>=6.0.0",
    "defusedxml>=0.7.0",
    "pytest-timeout>=2.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "RUF", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["e2e: end-to-end tests requiring external services (LLM APIs, MCP server)"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["grippy.*", "coir.*"]
ignore_missing_imports = true
follow_untyped_imports = true

[tool.bandit]
targets = ["src/grippy"]
exclude_dirs = ["tests"]
skips = [
    "B101",  # assert used — fine in production code for invariants
    "B404",  # import subprocess — needed for git/gh CLI calls
    "B603",  # subprocess without shell=True — this is the SECURE pattern
    "B607",  # partial executable path — git/gh are standard CLI tools
]
