[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grippy-martian-bench"
version = "0.1.0"
description = "Benchmark harness: Grippy vs Martian code-review-benchmark"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "grippy-mcp>=0.1.0",
    "httpx>=0.27",
    "anthropic>=0.40",
]
